--- a/dataset-into-wikidata/dataset-into-wikidata.ipynb
+++ b/dataset-into-wikidata/dataset-into-wikidata.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "java.net.URLEncoder"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "#'user/exec-query"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "nil"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -180,10 +180,10 @@
       "|     :code |              :label |\n",
       "|-----------+---------------------|\n",
       "| S12000050 |   North Lanarkshire |\n",
-      "| S12000033 |       Aberdeen City |\n",
-      "| S12000048 |   Perth and Kinross |\n",
+      "| S12000034 |       Aberdeenshire |\n",
       "| S12000045 | East Dunbartonshire |\n",
-      "| S12000018 |          Inverclyde |\n"
+      "| S12000018 |          Inverclyde |\n",
+      "| S12000028 |      South Ayrshire |\n"
      ]
     },
     {
@@ -192,7 +192,7 @@
        "nil"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "nil"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,12 +262,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Hyperlink](https://w.wiki/boe](https://w.wiki/boe) to try out the above SPARQL query."
+    "[Hyperlink](https://w.wiki/boe) to try out the above SPARQL query."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -275,13 +275,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|     :code |                :label |\n",
-      "|-----------+-----------------------|\n",
-      "| S12000048 |     Perth and Kinross |\n",
-      "| S12000006 | Dumfries and Galloway |\n",
-      "| S12000017 |              Highland |\n",
-      "| S12000049 |          Glasgow City |\n",
-      "| S12000036 |     City of Edinburgh |\n"
+      "|     :code |           :label |\n",
+      "|-----------+------------------|\n",
+      "| S12000020 |            Moray |\n",
+      "| S12000047 |             Fife |\n",
+      "| S12000005 | Clackmannanshire |\n",
+      "| S12000030 |         Stirling |\n",
+      "| S12000018 |       Inverclyde |\n"
      ]
     },
     {
@@ -290,7 +290,7 @@
        "nil"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "nil"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "nil"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -468,13 +468,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|     :code |              :label | :year | :population |\n",
-      "|-----------+---------------------+-------+-------------|\n",
-      "| S12000036 |   City of Edinburgh |  2001 |      449020 |\n",
-      "| S12000039 | West Dunbartonshire |  2012 |       90340 |\n",
-      "| S12000047 |                Fife |  2013 |      366900 |\n",
-      "| S12000008 |       East Ayrshire |  2017 |      121940 |\n",
-      "| S12000035 |     Argyll and Bute |  2009 |       89450 |\n"
+      "|     :code |                :label | :year | :population |\n",
+      "|-----------+-----------------------+-------+-------------|\n",
+      "| S12000008 |         East Ayrshire |  2015 |      122060 |\n",
+      "| S12000020 |                 Moray |  2008 |       92840 |\n",
+      "| S12000029 |     South Lanarkshire |  2001 |      302340 |\n",
+      "| S12000008 |         East Ayrshire |  2005 |      120280 |\n",
+      "| S12000006 | Dumfries and Galloway |  2012 |      150840 |\n"
      ]
     },
     {
@@ -483,7 +483,7 @@
        "nil"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +520,7 @@
        "nil"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,12 +559,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[Hyperlink](https://w.wiki/boc](https://w.wiki/boc) to try out the above SPARQL query."
+    "[Hyperlink](https://w.wiki/boc) to try out the above SPARQL query."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -572,13 +572,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|     :code |                :label | :year | :population |\n",
-      "|-----------+-----------------------+-------+-------------|\n",
-      "| S12000033 |         Aberdeen City |  2005 |      208690 |\n",
-      "| S12000047 |                  Fife |  2018 |      371910 |\n",
-      "| S12000006 | Dumfries and Galloway |  2019 |      148860 |\n",
-      "| S12000026 |      Scottish Borders |  2012 |      113720 |\n",
-      "| S12000034 |         Aberdeenshire |  2018 |      261470 |\n"
+      "|     :code |              :label | :year | :population |\n",
+      "|-----------+---------------------+-------+-------------|\n",
+      "| S12000036 |   City of Edinburgh |  2003 |      445300 |\n",
+      "| S12000011 |   East Renfrewshire |  2005 |       89880 |\n",
+      "| S12000039 | West Dunbartonshire |  2016 |       89860 |\n",
+      "| S12000028 |      South Ayrshire |  2016 |      112470 |\n",
+      "| S12000010 |        East Lothian |  2001 |       90180 |\n"
      ]
     },
     {
@@ -587,7 +587,7 @@
        "nil"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +626,7 @@
        "nil"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "#'user/code->qid"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
        "nil"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
