--- a/dataset-into-wikidata/dataset-into-wikidata.ipynb
+++ b/dataset-into-wikidata/dataset-into-wikidata.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "java.net.URLEncoder"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
        "#'user/exec-query"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
        "nil"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,15 +161,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Hyperlink](https://statistics.gov.scot/sparql?query=PREFIX%20rdfs%3A%20%3Chttp%3A%2F%2Fwww.w3.org%2F2000%2F01%2Frdf-schema%23%3E%0APREFIX%20uent%3A%20%3Chttp%3A%2F%2Fstatistics.data.gov.uk%2Fdef%2Fstatistical-entity%23%3E%0APREFIX%20ugeo%3A%20%3Chttp%3A%2F%2Fstatistics.data.gov.uk%2Fdef%2Fstatistical-geography%23%3E%0A%0ASELECT%20%0A%20%20(strafter(str(%3FareaUri)%2C%20%27http%3A%2F%2Fstatistics.gov.scot%2Fid%2Fstatistical-geography%2F%27)%20as%20%3Fcode)%20%0A%20%20%3Flabel%0A%0AWHERE%20%7B%0A%20%20%3FareaUri%20uent%3Acode%20%3Chttp%3A%2F%2Fstatistics.gov.scot%2Fid%2Fstatistical-entity%2FS12%3E%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20ugeo%3Astatus%20%27Live%27%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20rdfs%3Alabel%20%3Flabel%20.%0A%7D) to try out the above SPARQL query."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -177,13 +170,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|     :code |              :label |\n",
-      "|-----------+---------------------|\n",
-      "| S12000050 |   North Lanarkshire |\n",
-      "| S12000034 |       Aberdeenshire |\n",
-      "| S12000045 | East Dunbartonshire |\n",
-      "| S12000018 |          Inverclyde |\n",
-      "| S12000028 |      South Ayrshire |\n"
+      "|     :code |             :label |\n",
+      "|-----------+--------------------|\n",
+      "| S12000047 |               Fife |\n",
+      "| S12000017 |           Highland |\n",
+      "| S12000013 | Na h-Eileanan Siar |\n",
+      "| S12000030 |           Stirling |\n",
+      "| S12000028 |     South Ayrshire |\n"
      ]
     },
     {
@@ -192,7 +185,7 @@
        "nil"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +222,7 @@
        "nil"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -275,13 +268,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|     :code |           :label |\n",
-      "|-----------+------------------|\n",
-      "| S12000020 |            Moray |\n",
-      "| S12000047 |             Fife |\n",
-      "| S12000005 | Clackmannanshire |\n",
-      "| S12000030 |         Stirling |\n",
-      "| S12000018 |       Inverclyde |\n"
+      "|     :code |            :label |\n",
+      "|-----------+-------------------|\n",
+      "| S12000035 |   Argyll and Bute |\n",
+      "| S12000018 |        Inverclyde |\n",
+      "| S12000017 |          Highland |\n",
+      "| S12000040 |      West Lothian |\n",
+      "| S12000036 | City of Edinburgh |\n"
      ]
     },
     {
@@ -290,7 +283,7 @@
        "nil"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +326,7 @@
        "nil"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +398,7 @@
        "nil"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,15 +445,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Hyperlink](https://statistics.gov.scot/sparql?query=PREFIX%20qb%3A%20%3Chttp%3A%2F%2Fpurl.org%2Flinked-data%2Fcube%23%3E%0APREFIX%20rdfs%3A%20%3Chttp%3A%2F%2Fwww.w3.org%2F2000%2F01%2Frdf-schema%23%3E%0APREFIX%20pdmx%3A%20%3Chttp%3A%2F%2Fpurl.org%2Flinked-data%2Fsdmx%2F2009%2Fdimension%23%3E%0APREFIX%20sdmx%3A%20%3Chttp%3A%2F%2Fstatistics.gov.scot%2Fdef%2Fdimension%2F%3E%0APREFIX%20snum%3A%20%3Chttp%3A%2F%2Fstatistics.gov.scot%2Fdef%2Fmeasure-properties%2F%3E%0APREFIX%20uent%3A%20%3Chttp%3A%2F%2Fstatistics.data.gov.uk%2Fdef%2Fstatistical-entity%23%3E%0APREFIX%20ugeo%3A%20%3Chttp%3A%2F%2Fstatistics.data.gov.uk%2Fdef%2Fstatistical-geography%23%3E%0A%0ASELECT%20%0A%20%20(strafter(str(%3FareaUri)%2C%20%27http%3A%2F%2Fstatistics.gov.scot%2Fid%2Fstatistical-geography%2F%27)%20as%20%3Fcode)%20%0A%20%20%3Flabel%0A%20%20%3Fyear%0A%20%20%3Fpopulation%0A%0AWHERE%20%7B%0A%20%20%3FareaUri%20uent%3Acode%20%3Chttp%3A%2F%2Fstatistics.gov.scot%2Fid%2Fstatistical-entity%2FS12%3E%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20ugeo%3Astatus%20%27Live%27%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20rdfs%3Alabel%20%3Flabel%20.%0A%20%20%20%20%20%20%20%20%20%20%20%0A%20%20%3FpopulationUri%20qb%3AdataSet%20%3Chttp%3A%2F%2Fstatistics.gov.scot%2Fdata%2Fpopulation-estimates-current-geographic-boundaries%3E%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20pdmx%3ArefArea%20%3FareaUri%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20pdmx%3ArefPeriod%20%3FperiodUri%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20sdmx%3Aage%20%3Chttp%3A%2F%2Fstatistics.gov.scot%2Fdef%2Fconcept%2Fage%2Fall%3E%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20sdmx%3Asex%20%3Chttp%3A%2F%2Fstatistics.gov.scot%2Fdef%2Fconcept%2Fsex%2Fall%3E%20%3B%0A%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20%20snum%3Acount%20%3Fpopulation%20.%0A%20%20%0A%20%20%3FperiodUri%20rdfs%3Alabel%20%3Fyear%20.%0A%7D) to try out the above SPARQL query."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -468,13 +454,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|     :code |                :label | :year | :population |\n",
-      "|-----------+-----------------------+-------+-------------|\n",
-      "| S12000008 |         East Ayrshire |  2015 |      122060 |\n",
-      "| S12000020 |                 Moray |  2008 |       92840 |\n",
-      "| S12000029 |     South Lanarkshire |  2001 |      302340 |\n",
-      "| S12000008 |         East Ayrshire |  2005 |      120280 |\n",
-      "| S12000006 | Dumfries and Galloway |  2012 |      150840 |\n"
+      "|     :code |            :label | :year | :population |\n",
+      "|-----------+-------------------+-------+-------------|\n",
+      "| S12000026 |  Scottish Borders |  2009 |      113590 |\n",
+      "| S12000029 | South Lanarkshire |  2015 |      316230 |\n",
+      "| S12000027 |  Shetland Islands |  2003 |       21950 |\n",
+      "| S12000035 |   Argyll and Bute |  2017 |       86810 |\n",
+      "| S12000050 | North Lanarkshire |  2005 |      327140 |\n"
      ]
     },
     {
@@ -483,7 +469,7 @@
        "nil"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -520,7 +506,7 @@
        "nil"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -572,13 +558,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "|     :code |              :label | :year | :population |\n",
-      "|-----------+---------------------+-------+-------------|\n",
-      "| S12000036 |   City of Edinburgh |  2003 |      445300 |\n",
-      "| S12000011 |   East Renfrewshire |  2005 |       89880 |\n",
-      "| S12000039 | West Dunbartonshire |  2016 |       89860 |\n",
-      "| S12000028 |      South Ayrshire |  2016 |      112470 |\n",
-      "| S12000010 |        East Lothian |  2001 |       90180 |\n"
+      "|     :code |            :label | :year | :population |\n",
+      "|-----------+-------------------+-------+-------------|\n",
+      "| S12000011 | East Renfrewshire |  2011 |       90810 |\n",
+      "| S12000029 | South Lanarkshire |  2005 |      306850 |\n",
+      "| S12000036 | City of Edinburgh |  2010 |      469930 |\n",
+      "| S12000050 | North Lanarkshire |  2010 |      336280 |\n",
+      "| S12000028 |    South Ayrshire |  2005 |      112030 |\n"
      ]
     },
     {
@@ -587,7 +573,7 @@
        "nil"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -608,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +612,7 @@
        "nil"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +686,7 @@
        "#'user/code->qid"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +713,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +722,7 @@
        "nil"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
