--- a/dataset-into-wikidata/README.adoc
+++ b/dataset-into-wikidata/README.adoc
@@ -24,7 +24,7 @@ identifies the Stirling council area.
 for https://www.wikidata.org/wiki/Q207111[North Lanarkshire]
 was incorrect, so I amended it directly via editing its web page.
 . Reconcile the population records in Wikidata with those from statistics.gov.scot.
-** SPARQL queries are used to fetch population values from statistics.gov.scot and Wikidata
+** SPARQL queries are used to fetch population values from statistics.gov.scot and Wikidata,
 and these are compared.
 ** When this comparison was first executed it discovered 583 differences:
 574 were population records that didn't exist in Wikidata;
@@ -33,8 +33,8 @@ and these are compared.
 However, this was laborious, so I decided to introduce some automation by
 using https://quickstatements.toolforge.org/[QuickSatements].
 ** QuickStatements accepts CSV input - representing edits to be applied to Wikidata.
-I generated the quickStatements CSV input using a script.
-The link:population-values-quickstatements-2020-09-09T11_20GMT.csv[resulting CSV file]
+I generated the quickStatements CSV input using a script -
+the link:population-values-quickstatements-2020-09-09T11_20GMT.csv[resulting CSV file]
 specified 2232 individual edits to Wikidata. These were successfully executed (taking about 30 mins)
 against Wikidata by QuickStatements. (Unfortunately QuickStatements does not yet
 support a means to set the `rank` of a _triple_ so I had to individually edit the 32 council
@@ -43,13 +43,13 @@ area pages to mark, in each, its 2019 population value as the `Preferred rank` p
 
 == The usefulness of the uploaded dataset
 
-The uploaded dataset can be pulled (dynamically de-referenced) into Wikipedia articles and other web pages.
+The uploaded dataset can be pulled (_de-referenced_) into Wikipedia articles and other web pages.
 
 === Embedding dataset values into Wikipedia articles
 As an example, I edited the Wikipedia article
 https://simple.wikipedia.org/wiki/Council_areas_of_Scotland[Council areas of Scotland] to insert into its main table,
 the new column "_Number of people (latest estimate)_" whose values are pulled
-(each time the page is rendered) directly from the data that I uploaded into Wikidata.
+(each time the page is rendered) directly from the data that I uploaded into Wikidata:
 
 image::screenshot-wikipedia-council-areas-article.png[align="center"]
 
@@ -60,9 +60,9 @@ is a line graph, dynamically generated from the new Wikidata data, that can be e
 === Concerns, next steps, alternative approaches
 Interestingly, there is https://en.wikipedia.org/wiki/Wikipedia:Requests_for_comment/Wikidata_Phase_2[some discussion]
 about the pros & cons of inserting Wikidata values into Wikipedia articles.
-The main argument (by some) against is the immaturity of Wikidata's structure:
-therefore a concern about the permanence of references to data within its structure.
-But those for it, point out that early use & evolution might be the best path to maturity.
+The main argument against is the immaturity of Wikidata's structure:
+therefore a concern about the durability of the references into its data structure.
+The counter point is that early use & evolution might be the best path to maturity.
 
 The case study for our Data Commons Scotland project, is _open data about waste in Scotland_.
 So a next step for the project might be to upload into Wikidata, datasets that describe the
@@ -74,7 +74,8 @@ for the description of such data about waste, so new ones would need to be ratif
 
 Should such datasets actually be uploaded into Wikidata?...
 These are small datasets and they seem to fit well enough into Wikidata's knowledge graph.
-Uploading them into Wikidata may make them easier to access and help enrich Wikidata's knowledge graph.
-But then, of course, there is the _keeping it up-to-date_ issue to solve with.
-Alternatively, those datasets could be pulled directly from statistics.gov.scot into Wikipedia
+Uploading them into Wikidata may make them easier to access, de-silo the data
+and help enrich Wikidata's knowledge graph.
+But then, of course, there is the _keeping it up-to-date_ issue to solve.
+Alternatively, those datasets could be pulled dynamically and directly from statistics.gov.scot into Wikipedia
 articles with the help of some new MediaWiki https://www.mediawiki.org/wiki/Category:Extensions[extensions].
